# graphicsEngine_GC

./: .gitignore  CMakeLists.txt  compile.sh  display.c  display.h  globals.c  globals.h  input.c  input.h  loader.c  loader.h  main.c  math.c  math.h  readme.md  readme_ES.md  transformations.c  transformations.h  your_executable
include/: math.h  models.h
src/: display.c  globals.c  input.c  loader.c  main.c  math.c  readme.md  transformations.c
